; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/expert/extr_sqlite3expert.c_idxLargestIndex.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/expert/extr_sqlite3expert.c_idxLargestIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [137 x i8] c"SELECT max(i.seqno) FROM   sqlite_master AS s,   pragma_index_list(s.name) AS l,   pragma_index_info(l.name) AS i WHERE s.type = 'table'\00", align 1
@SQLITE_ROW = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8**)* @idxLargestIndex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @idxLargestIndex(i32* %0, i32* %1, i8** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8** %2, i8*** %6, align 8
  %10 = load i32, i32* @SQLITE_OK, align 4
  store i32 %10, i32* %7, align 4
  store i8* getelementptr inbounds ([137 x i8], [137 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  store i32* null, i32** %9, align 8
  %11 = load i32*, i32** %5, align 8
  store i32 0, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i8**, i8*** %6, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @idxPrepareStmt(i32* %12, i32** %9, i8** %13, i8* %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @SQLITE_OK, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %29

19:                                               ; preds = %3
  %20 = load i64, i64* @SQLITE_ROW, align 8
  %21 = load i32*, i32** %9, align 8
  %22 = call i64 @sqlite3_step(i32* %21)
  %23 = icmp eq i64 %20, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %19
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 @sqlite3_column_int(i32* %25, i32 0)
  %27 = add nsw i32 %26, 1
  %28 = load i32*, i32** %5, align 8
  store i32 %27, i32* %28, align 4
  br label %29

29:                                               ; preds = %24, %19, %3
  %30 = load i32*, i32** %9, align 8
  %31 = call i32 @idxFinalize(i32* %7, i32* %30)
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @idxPrepareStmt(i32*, i32**, i8**, i8*) #1

declare dso_local i64 @sqlite3_step(i32*) #1

declare dso_local i32 @sqlite3_column_int(i32*, i32) #1

declare dso_local i32 @idxFinalize(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
